--- a/flaskps/templates/auth/panel_components/empleados.html
+++ b/flaskps/templates/auth/panel_components/empleados.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block contentitem %}
         <div class="row">
-            <div class="col-md-6 mb-3">
+            <div class="col-12 mb-3">
                 <h2 class="h4 black2">Docentes</h2>
                 <hr>
                 {% for p in permisos %}
@@ -17,9 +17,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-12">
                 <div class="table-responsive">
                     <table class="table table-striped">
+                        <tbody>
                         <!-- Row Titulos -->
                         <tr>
                             <th>Apellido</th>
@@ -39,13 +40,9 @@
                                 <!-- Ver estudiante -->
                                 <a class="btn btn-success btn-sm" data-toggle="modal" data-target="#docenteShow{{row.id}}"><i class="fas fa-eye mr-2"></i>Ver</a>
                                 {% endif %}
-                                {% endfor %}
-                                {% for p in permisos %}
                                 {% if p.nombre == 'docente_update' %}
                                 <a href="/update_docente/{{row.id}}" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#docenteEdit{{row.id}}"><i class="fas fa-edit mr-2"></i>Editar</a>
                                 {% endif %}
-                                {% endfor %}
-                                {% for p in permisos %}
                                 {% if p.nombre == 'docente_destroy' %}
                                 <a href="/delete_docente/{{row.id}}" class="btn btn-danger btn-sm" onclick="return confirm('Are You Sure For Delete?')"><i class="fas fa-user-minus mr-2"></i>Eliminar</a>
                                 {% endif %}
@@ -64,7 +61,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="row">
-                                            <div class="col-md-12">
+                                            <div class="col-12">
                                                 <p class="mb-2">Nombre: {{row.nombre}}</p>
                                                 <p class="mb-2">Apellido: {{row.apellido}}</p>
                                                 <p class="mb-2">Fecha de nacimiento: {{row.fecha_nac}}</p>
@@ -102,11 +99,11 @@
                                             <input type="hidden"  name="id" value="{{row.id}}">
                                             <!-- Nombre y apellido -->
                                             <div class="form-group row">
-                                                <div class="col-md-6">
+                                                <div class="col-6">
                                                     <label>Apellido</label>
                                                     <input type="text" class="form-control" value="{{row.apellido}}" placeholder="Apellido" name="apellido" required="1">
                                                 </div>
-                                                <div class="col-md-6">
+                                                <div class="col-6">
                                                     <label>Nombre</label>
                                                     <input type="text" class="form-control" value="{{row.nombre}}" placeholder="Nombre" name="nombre" required="1">
                                                 </div>
@@ -114,11 +111,11 @@
                 
                                             <!-- Fecha de nacimiento y localidad -->
                                             <div class="form-group row">
-                                                <div class="col-md-6">
+                                                <div class="col-6">
                                                     <label>Fecha de nacimiento</label>
                                                     <input type="date" class="form-control" value="{{row.fecha_nac}}" name="fecha_nac" required="1">
                                                 </div>
-                                                <div class="col-md-6">
+                                                <div class="col-6">
                                                     <label>Localidad</label>
                                                     <select name="localidad_id" class="localidades browser-default custom-select" required="1">
 
@@ -128,11 +125,11 @@
                 
                                             <!-- Domicilio y genero -->
                                             <div class="form-group row">
-                                                <div class="col-md-6">
+                                                <div class="col-6">
                                                     <label>Domicilio</label>
                                                     <input type="text" min="0" class="form-control" value="{{row.domicilio}}" placeholder="Domicilio" name="domicilio" required="1">
                                                 </div>
-                                                <div class="col-md-6">
+                                                <div class="col-6">
                                                     <label>Género</label>
                                                     <select name="genero_id" class="browser-default custom-select" required="1">
                                                         <option selected disabled>Genero</option>
@@ -149,13 +146,13 @@
                                                 
                                             <!-- Documento -->
                                             <div class="form-group row">
-                                                <div class="col-md-6">
+                                                <div class="col-6">
                                                     <label>Tipo Documento</label>
                                                     <select name="tipo_doc_id" class="tipo_docs browser-default custom-select" required="1">
                                                         
                                                     </select>
                                                 </div>
-                                                <div class="col-md-6">
+                                                <div class="col-6">
                                                     <label>Número</label>
                                                     <input type="number" min="0" class="form-control" value="{{row.numero}}" placeholder="Numero DNI" name="numero" required="1">
                                                 </div>
@@ -163,17 +160,17 @@
                                                 
                                             <!-- Teléfono -->
                                             <div class="form-group row">
-                                                <div class="col-md-6">
+                                                <div class="col-6">
                                                     <label>Teléfono</label>
                                                     <input type="number" min="0" class="form-control" value="{{row.tel}}" placeholder="Telefono" name="tel" required="1">
                                                 </div>
                                             </div>
                                             <hr>
                                             <div class="form-group row">
-                                                <div class="col-md-6 text-left">
+                                                <div class="col-6 text-left">
                                                     <button type="button" class="btn btn-light" data-dismiss="modal">Cancelar</button>
                                                 </div>
-                                                <div class="col-md-6 text-right">
+                                                <div class="col-6 text-right">
                                                     <button class="btn btn-primary" type="sbumit">Actualizar</button>
                                                 </div>
                                             </div>
@@ -205,11 +202,11 @@
 
                                 <!-- Nombre y apellido -->
                                 <div class="form-group row">
-                                    <div class="col-md-6">
+                                    <div class="col-6">
                                         <label>Apellido</label>
                                         <input type="text" class="form-control" placeholder="Apellido" name="apellido" required="1">
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-6">
                                         <label>Nombre</label>
                                         <input type="text" class="form-control" placeholder="Nombre" name="nombre" required="1">
                                     </div>
@@ -217,11 +214,11 @@
 
                                 <!-- Fecha de nacimiento y localidad -->
                                 <div class="form-group row">
-                                    <div class="col-md-6">
+                                    <div class="col-6">
                                         <label>Fecha de nacimiento</label>
                                         <input type="date" class="form-control" name="fecha_nac" required="1">
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-6">
                                         <label>Localidad</label>
                                         <select name="localidad_id" class="localidades browser-default custom-select" required="1">
                                             
@@ -231,11 +228,11 @@
 
                                 <!-- Domicilio y genero -->
                                 <div class="form-group row">
-                                    <div class="col-md-6">
+                                    <div class="col-6">
                                         <label>Domicilio</label>
                                         <input type="text" min="0" class="form-control" placeholder="Domicilio" name="domicilio" required="1">
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-6">
                                         <label>Género</label>
                                         <select name="genero_id" class="browser-default custom-select" required="1">
                                             <option selected disabled>Seleccionar</option>
@@ -248,13 +245,13 @@
                                 
                                 <!-- Documento -->
                                 <div class="form-group row">
-                                    <div class="col-md-6">
+                                    <div class="col-6">
                                         <label>Tipo Documento</label>
                                         <select name="tipo_doc_id" class="tipo_docs browser-default custom-select" required="1">
 
                                         </select>
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-6">
                                         <label>Número</label>
                                         <input type="number" min="0" class="form-control" placeholder="Numero DNI" name="numero" required="1">
                                     </div>
@@ -262,18 +259,18 @@
                                 
                                 <!-- Teléfono -->
                                 <div class="form-group row">
-                                    <div class="col-md-6">
+                                    <div class="col-6">
                                         <label>Teléfono</label>
                                         <input type="number" min="0" class="form-control" placeholder="Telefono" name="tel" required="1">
                                     </div>
                                 </div>
                                 <hr>
                                 <div class="form-group row">
-                                    <div class="col-md-6 text-left">
+                                    <div class="col-6 text-left">
                                         <button type="button" class="btn btn-light black2" data-dismiss="modal">Cancelar</button>
                                     </div>
-                                    <div class="col-md-6 text-right">
-                                        <button class="btn btn-primary-dark white1" type="submit">Guardar</button>
+                                    <div class="col-6 text-right">
+                                        <button class="btn btn-primary" type="submit">Guardar</button>
                                     </div>
                                 </div>
                             </form>
