--- a/flaskps/static/css/style.css
+++ b/flaskps/static/css/style.css
@@ -54,7 +54,7 @@ body {
 .h3 { font-size: 1.8em !important; }
 .h4 { font-size: 1.5em !important; }
 .h5 { font-size: 1.2em !important; }
-.h6 { font-size: 0.8em !important; }
+.h6 { font-size: 0.88em !important; }
 p { font-size: 16px; }
 h1, h2, h3, h4, h5, h6, p {
     color: #393939;
@@ -343,6 +343,23 @@ h1, h2, h3, h4, h5, h6, p {
 .btn-note-detail {
     background: #7ed4c9;
     font-weight: bold;
+}
+.alert-fixed {
+    position: fixed;
+    bottom: 9vh;
+    top: auto;
+    left: 3vw;;
+    right: 3vw;
+    z-index:9999;
+}
+@media (min-width: 992px) {
+    .alert-fixed {
+        position: fixed;
+        bottom: 9vh;
+        left: 30vw;
+        right: 30vw;
+        z-index:9999;
+    }   
 }
 
 /*--------------------------------------------------------------
