--- a/flaskps/templates/auth/panel_components/mensajes_alertas.html
+++ b/flaskps/templates/auth/panel_components/mensajes_alertas.html
@@ -1,12 +1,25 @@
 {%with messages = get_flashed_messages()%}
 {%if messages%}
 {% for message in messages %}
-<div class="alert alert-success alert-dismissable c-alert" role="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label ="close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-        {{message}}
+<div class="alert-fixed">
+<div id="success-primary" class="card alert alert-primary alert-dismissable c-alert" role="alert">
+    <div class="row m-0 p-0">
+        <div class="col-9">
+            {{message}}
+        </div>
+        <div class="col-3">
+            <button type="button" class="close" data-dismiss="alert" aria-label ="close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    </div>
 </div>
+</div>
+<script>
+    $("#success-primary").fadeTo(3000, 500).slideUp(500, function(){
+        $("#success-primary").slideUp(500);
+    });
+</script>
 {%endfor%}
 {%endif%}
-{%endwith%}
+{%endwith%} 
