--- a/flaskps/templates/layout.html
+++ b/flaskps/templates/layout.html
@@ -16,9 +16,9 @@
         <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/mdb.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/vue.js') }}"></script>
+        <!--script src="{{ url_for('static', filename='js/vue.js') }}"></script>
         <script src="https://unpkg.com/vue"></script>
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script-->
         <script src="{{ url_for('static', filename='js/main.js') }}"></script>
         <!-- Block Head -->
         {% block head %}
